--- a/composer.json
+++ b/composer.json
@@ -48,7 +48,7 @@
             }
         },
         "branch-alias": {
-            "dev-main": "dev-main"
+            "dev-main": "1.x-dev"
         }
     },
     "scripts": {
