--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
     ],
     "require": {
         "guzzlehttp/guzzle": "^7.0.1",
-        "illuminate/support": "^8.0|^9.0|^10.0"
+        "illuminate/support": "^8.0|^9.0|^10.0",
+        "kanekescom/laravel-helperia": "^1.0"
     },
     "require-dev": {
         "orchestra/testbench": "^6.0",
