--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -5,8 +5,11 @@
          colors="true"
 >
     <testsuites>
-        <testsuite name="Test">
-            <directory suffix="Test.php">tests</directory>
+        <testsuite name="Unit">
+            <directory suffix="Test.php">./tests/Unit</directory>
+        </testsuite>
+        <testsuite name="Feature">
+            <directory suffix="Test.php">./tests/Feature</directory>
         </testsuite>
     </testsuites>
     <coverage processUncoveredFiles="true">
