--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -45,8 +45,7 @@
         <env name="SIASN_SSO_PASSWORD" value=""/>
         <env name="SIASN_CONST_INSTANSI_ID" value=""/>
         <env name="SIASN_CONST_SATUAN_KERJA_ID" value=""/>
+        <env name="SIASN_CONST_PNS_ORANG_ID" value=""/>
         <env name="SIASN_GET_REQUEST_ENDPOINT_TEST" value="https://apimws.bkn.go.id:8243/apisiasn/1.0/referensi/ref-unor"/>
-        <env name="SIASN_POST_REQUEST_ENDPOINT_TEST" value="https://apimws.bkn.go.id:8243/apisiasn/1.0/pns/data-utama-update"/>
-        <env name="PNS_ORANG_ID" value=""/>
     </php>
 </phpunit>
