--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
         "php": "^8.1",
         "spatie/laravel-package-tools": "^1.14.0",
         "guzzlehttp/guzzle": "^7.2",
-        "illuminate/contracts": "^10.0",
+        "illuminate/contracts": "^10.0|^11.0",
         "kanekescom/laravel-helperia": "^2.0"
     },
     "require-dev": {
