--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -36,16 +36,16 @@
         </include>
     </source>
     <php>
-        <env name="SIASN_MODE" value="training"/>
+        <env name="SIASN_MODE" value="{{SIASN_MODE}}"/>
         <env name="SIASN_DEBUG" value="false"/>
-        <env name="SIASN_APIM_USERNAME" value=""/>
-        <env name="SIASN_APIM_PASSWORD" value=""/>
-        <env name="SIASN_SSO_CLIENT_ID" value=""/>
-        <env name="SIASN_SSO_USERNAME" value=""/>
-        <env name="SIASN_SSO_PASSWORD" value=""/>
-        <env name="SIASN_CONST_INSTANSI_ID" value=""/>
-        <env name="SIASN_CONST_SATUAN_KERJA_ID" value=""/>
-        <env name="SIASN_CONST_PNS_ORANG_ID" value=""/>
+        <env name="SIASN_APIM_USERNAME" value="{{SIASN_APIM_USERNAME}}"/>
+        <env name="SIASN_APIM_PASSWORD" value="{{SIASN_APIM_PASSWORD}}"/>
+        <env name="SIASN_SSO_CLIENT_ID" value="{{SIASN_SSO_CLIENT_ID}}"/>
+        <env name="SIASN_SSO_USERNAME" value="{{SIASN_SSO_USERNAME}}"/>
+        <env name="SIASN_SSO_PASSWORD" value="{{SIASN_SSO_PASSWORD}}"/>
+        <env name="SIASN_CONST_INSTANSI_ID" value="{{SIASN_CONST_INSTANSI_ID}}"/>
+        <env name="SIASN_CONST_SATUAN_KERJA_ID" value="{{SIASN_CONST_SATUAN_KERJA_ID}}"/>
+        <env name="SIASN_CONST_PNS_ORANG_ID" value="{{SIASN_CONST_PNS_ORANG_ID}}"/>
         <env name="SIASN_GET_REQUEST_ENDPOINT_TEST" value="https://apimws.bkn.go.id:8243/apisiasn/1.0/referensi/ref-unor"/>
     </php>
 </phpunit>
