--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -62,7 +62,7 @@ jobs:
         with:
           include: 'phpunit.xml'
           find: '{{SIASN_MODE}}'
-          replace: ${{ secrets.SIASN_MODE }}
+          replace: '${{ secrets.SIASN_MODE }}'
           regex: false
 
       - name: Replace SIASN_APIM_USERNAME in phpunit.xml
@@ -70,7 +70,7 @@ jobs:
         with:
           include: 'phpunit.xml'
           find: '{{SIASN_APIM_USERNAME}}'
-          replace: ${{ secrets.SIASN_APIM_USERNAME }}
+          replace: '${{ secrets.SIASN_APIM_USERNAME }}'
           regex: false
 
       - name: Replace SIASN_APIM_PASSWORD in phpunit.xml
@@ -78,7 +78,7 @@ jobs:
         with:
           include: 'phpunit.xml'
           find: '{{SIASN_APIM_PASSWORD}}'
-          replace: ${{ secrets.SIASN_APIM_PASSWORD }}
+          replace: '${{ secrets.SIASN_APIM_PASSWORD }}'
           regex: false
 
       - name: Replace SIASN_SSO_CLIENT_ID in phpunit.xml
@@ -86,7 +86,7 @@ jobs:
         with:
           include: 'phpunit.xml'
           find: '{{SIASN_SSO_CLIENT_ID}}'
-          replace: ${{ secrets.SIASN_SSO_CLIENT_ID }}
+          replace: '${{ secrets.SIASN_SSO_CLIENT_ID }}'
           regex: false
 
       - name: Replace SIASN_SSO_USERNAME in phpunit.xml
@@ -94,7 +94,7 @@ jobs:
         with:
           include: 'phpunit.xml'
           find: '{{SIASN_SSO_USERNAME}}'
-          replace: ${{ secrets.SIASN_SSO_USERNAME }}
+          replace: '${{ secrets.SIASN_SSO_USERNAME }}'
           regex: false
 
       - name: Replace SIASN_SSO_PASSWORD in phpunit.xml
@@ -102,7 +102,7 @@ jobs:
         with:
           include: 'phpunit.xml'
           find: '{{SIASN_SSO_PASSWORD}}'
-          replace: ${{ secrets.SIASN_SSO_PASSWORD }}
+          replace: '${{ secrets.SIASN_SSO_PASSWORD }}'
           regex: false
 
       - name: Replace SIASN_CONST_INSTANSI_ID in phpunit.xml
@@ -110,7 +110,7 @@ jobs:
         with:
           include: 'phpunit.xml'
           find: '{{SIASN_CONST_INSTANSI_ID}}'
-          replace: ${{ secrets.SIASN_CONST_INSTANSI_ID }}
+          replace: '${{ secrets.SIASN_CONST_INSTANSI_ID }}'
           regex: false
 
       - name: Replace SIASN_CONST_SATUAN_KERJA_ID in phpunit.xml
@@ -118,7 +118,7 @@ jobs:
         with:
           include: 'phpunit.xml'
           find: '{{SIASN_CONST_SATUAN_KERJA_ID}}'
-          replace: ${{ secrets.SIASN_CONST_SATUAN_KERJA_ID }}
+          replace: '${{ secrets.SIASN_CONST_SATUAN_KERJA_ID }}'
           regex: false
 
       - name: Replace SIASN_CONST_PNS_ORANG_ID in phpunit.xml
@@ -126,7 +126,7 @@ jobs:
         with:
           include: 'phpunit.xml'
           find: '{{SIASN_CONST_PNS_ORANG_ID}}'
-          replace: ${{ secrets.SIASN_CONST_PNS_ORANG_ID }}
+          replace: '${{ secrets.SIASN_CONST_PNS_ORANG_ID }}'
           regex: false
 
       - name: Execute tests
