--- a/.github/workflows/update-changelog.yml
+++ b/.github/workflows/update-changelog.yml
@@ -6,6 +6,7 @@ on:
 
 permissions:
   contents: write
+  pull-requests: write
 
 jobs:
   update:
@@ -27,6 +28,15 @@ jobs:
       - name: Commit updated CHANGELOG
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
-          branch: main
+          branch: update-changelog
           commit_message: Update CHANGELOG
           file_pattern: CHANGELOG.md
+
+      - name: Create Pull Request
+        uses: peter-evans/create-pull-request@v5
+        with:
+          branch: update-changelog
+          commit-message: Update CHANGELOG
+          title: Update CHANGELOG
+          body: This PR updates the CHANGELOG with the latest release notes.
+          labels: changelog
