--- a/qodana.yaml
+++ b/qodana.yaml
@@ -19,7 +19,7 @@ profile:
 #      - <path/where/not/run/inspection>
 
 php:
-  version: "8.2" #(Applied in CI/CD pipeline)
+  version: 8.2 #(Applied in CI/CD pipeline)
 
 #Execute shell command before Qodana execution (Applied in CI/CD pipeline)
 #bootstrap: sh ./prepare-qodana.sh
@@ -29,4 +29,4 @@ php:
 #  - id: <plugin.id> #(plugin id can be found at https://plugins.jetbrains.com)
 
 #Specify Qodana linter for analysis (Applied in CI/CD pipeline)
-linter: jetbrains/qodana-php:latest
+linter: jetbrains/qodana-php:2024.3
