--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
     "name": "kanekescom/laravel-siasn-api",
-    "description": "SIASN REST API Client for Laravel",
+    "description": "A Laravel package for seamless integration with the SIASN REST API",
     "keywords": [
+        "kanekes",
         "kanekescom",
         "laravel",
         "laravel-siasn-api",
@@ -20,50 +21,45 @@
             "homepage": "https://linktr.ee/achmadhadikurnia"
         }
     ],
+    "support": {
+        "issues": "https://github.com/kanekescom/laravel-siasn-api/issues",
+        "source": "https://github.com/kanekescom/laravel-siasn-api",
+        "docs": "https://github.com/kanekescom/laravel-siasn-api",
+        "email": "kanekescom@gmail.com"
+    },
     "require": {
         "php": "^8.2",
         "spatie/laravel-package-tools": "^1.16",
-        "guzzlehttp/guzzle": "^7.2",
-        "illuminate/contracts": "^10.0||^11.0",
-        "kanekescom/laravel-helperia": "^2.0"
+        "illuminate/contracts": "^10.0||^11.0||^12.0"
     },
     "require-dev": {
+        "roave/security-advisories": "dev-latest",
         "laravel/pint": "^1.14",
         "nunomaduro/collision": "^8.1.1||^7.10.0",
-        "larastan/larastan": "^2.9",
-        "orchestra/testbench": "^9.0.0||^8.22.0",
-        "pestphp/pest": "^2.34",
-        "pestphp/pest-plugin-arch": "^2.7",
-        "pestphp/pest-plugin-laravel": "^2.3",
-        "phpstan/extension-installer": "^1.3",
-        "phpstan/phpstan-deprecation-rules": "^1.1",
-        "phpstan/phpstan-phpunit": "^1.3",
+        "larastan/larastan": "^2.9||^3.0",
+        "orchestra/testbench": "^10.0.0||^9.0.0||^8.22.0",
+        "pestphp/pest": "^3.0",
+        "pestphp/pest-plugin-arch": "^3.0",
+        "pestphp/pest-plugin-laravel": "^3.0",
+        "phpstan/extension-installer": "^1.3||^2.0",
+        "phpstan/phpstan-deprecation-rules": "^1.1||^2.0",
+        "phpstan/phpstan-phpunit": "^1.3||^2.0",
         "spatie/laravel-ray": "^1.35"
     },
     "autoload": {
         "psr-4": {
-            "Kanekescom\\Siasn\\Api\\": "src/"
+            "Kanekes\\Siasn\\Api\\": "src/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "Kanekescom\\Siasn\\Api\\Tests\\": "tests/",
+            "Kanekes\\Siasn\\Api\\Tests\\": "tests/",
             "Workbench\\App\\": "workbench/app/"
         }
     },
     "scripts": {
         "post-autoload-dump": "@composer run prepare",
-        "clear": "@php vendor/bin/testbench package:purge-laravel-siasn-api --ansi",
         "prepare": "@php vendor/bin/testbench package:discover --ansi",
-        "build": [
-            "@composer run prepare",
-            "@php vendor/bin/testbench workbench:build --ansi"
-        ],
-        "start": [
-            "Composer\\Config::disableProcessTimeout",
-            "@composer run build",
-            "@php vendor/bin/testbench serve"
-        ],
         "analyse": "vendor/bin/phpstan analyse",
         "test": "vendor/bin/pest",
         "test-coverage": "vendor/bin/pest --coverage",
@@ -79,14 +75,14 @@
     "extra": {
         "laravel": {
             "providers": [
-                "Kanekescom\\Siasn\\Api\\SiasnServiceProvider"
+                "Kanekes\\Siasn\\Api\\SiasnServiceProvider"
             ],
             "aliases": {
-                "Siasn": "Kanekescom\\Siasn\\Api\\Facades\\Siasn"
+                "Siasn": "Kanekes\\Siasn\\Api\\Facades\\Siasn"
             }
         },
         "branch-alias": {
-            "dev-main": "2.x-dev"
+            "dev-main": "3.x-dev"
         }
     },
     "funding": [
