--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -5,9 +5,8 @@ parameters:
     level: 5
     paths:
         - src
+        - config
+        - database
     tmpDir: build/phpstan
     checkOctaneCompatibility: true
     checkModelProperties: true
-
-    ignoreErrors:
-        - '#Unsafe usage of new static#'
