--- a/.github/workflows/auto-merge-dependabot-updates.yml
+++ b/.github/workflows/auto-merge-dependabot-updates.yml
@@ -11,15 +11,25 @@ jobs:
     timeout-minutes: 5
     if: ${{ github.actor == 'dependabot[bot]' }}
     steps:
+
       - name: Dependabot metadata
         id: metadata
-        uses: dependabot/fetch-metadata@v2.3.0
+        uses: dependabot/fetch-metadata@v2
         with:
           github-token: "${{ secrets.GITHUB_TOKEN }}"
 
-      - name: Auto-merge Dependabot PRs for semver-minor and patch updates
-        if: ${{steps.metadata.outputs.update-type == 'version-update:semver-minor' || steps.metadata.outputs.update-type == 'version-update:semver-patch'}}
-        run: gh pr merge --auto --merge "$PR_URL"
+      - name: Check update type
+        run: echo "Update type: ${{ steps.metadata.outputs.update-type }}"
+
+      - name: Auto-merge Dependabot PRs for minor and patch updates
+        if: contains(fromJSON('["version-update:semver-minor", "version-update:semver-patch"]'), steps.metadata.outputs.update-type)
         env:
-          PR_URL: ${{github.event.pull_request.html_url}}
-          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+          PR_URL: ${{ github.event.pull_request.html_url }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          echo "Merging PR: $PR_URL"
+          gh pr merge --auto --merge "$PR_URL"
+
+      - name: Notify failure
+        if: failure()
+        run: echo "Auto-merge failed. Check PR status and logs."
