--- a/.github/workflows/phpstan-static-analysis.yml
+++ b/.github/workflows/phpstan-static-analysis.yml
@@ -5,33 +5,55 @@ on:
     paths:
       - '**.php'
       - 'phpstan.neon.dist'
-      - '.github/workflows/phpstan-analysis.yml'
-  pull_request:
-    paths:
-      - '**.php'
-      - 'phpstan.neon.dist'
-      - '.github/workflows/phpstan-analysis.yml'
+      - 'phpstan.neon'
+      - '.github/workflows/phpstan-static-analysis.yml'
+
+permissions:
+  contents: read
 
 jobs:
   phpstan:
-    name: PHPStan Analysis
+    name: Static Analysis with PHPStan
     runs-on: ubuntu-latest
     timeout-minutes: 5
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
-          php-version: '8.4'
+          php-version: '8.2'
           coverage: none
-          extensions: dom, curl, libxml, mbstring, zip, pcntl, pdo, sqlite, pdo_sqlite
+          tools: composer, phpstan
 
-      - name: Install dependencies
-        uses: ramsey/composer-install@v3
+      - name: Cache Composer dependencies
+        uses: actions/cache@v3
         with:
-          composer-options: "--prefer-dist"
+          path: ~/.composer/cache
+          key: composer-${{ runner.os }}-${{ hashFiles('**/composer.lock') }}
+          restore-keys: composer-${{ runner.os }}-
+
+      - name: Install Composer Dependencies
+        run: |
+          composer install --no-progress --prefer-dist --optimize-autoloader
+
+      - name: Verify PHPStan Configuration
+        run: |
+          if [ -f phpstan.neon ]; then
+            echo "Using phpstan.neon"
+          elif [ -f phpstan.neon.dist ]; then
+            echo "Using phpstan.neon.dist"
+          else
+            echo "PHPStan configuration file not found!" && exit 1
+          fi
 
       - name: Run PHPStan
-        run: ./vendor/bin/phpstan --error-format=github
+        run: ./vendor/bin/phpstan analyse --error-format=github
+
+      - name: Notify Failure
+        if: failure()
+        run: echo "PHPStan failed. Please check the errors in the GitHub Actions logs."
