chore(workflows): update Qodana action to use latest version

--- a/.github/workflows/qodana-code-quality-scan.yml
+++ b/.github/workflows/qodana-code-quality-scan.yml
@@ -23,7 +23,7 @@ jobs:
           restore-keys: qodana-${{ runner.os }}-
 
       - name: Qodana Scan
-        uses: JetBrains/qodana-action@v2024.1
+        uses: JetBrains/qodana-action@latest
         env:
           QODANA_TOKEN: ${{ secrets.QODANA_TOKEN }}
         continue-on-error: true
