--- a/composer.json
+++ b/composer.json
@@ -49,7 +49,10 @@
     "autoload": {
         "psr-4": {
             "Kanekes\\Siasn\\Api\\": "src/"
-        }
+        },
+        "files": [
+            "config/siasn-api.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
