--- a/composer.json
+++ b/composer.json
@@ -29,8 +29,9 @@
     },
     "require": {
         "php": "^8.2",
-        "spatie/laravel-package-tools": "^1.16",
-        "illuminate/contracts": "^10.0||^11.0||^12.0"
+        "guzzlehttp/guzzle": "^7.0",
+        "illuminate/contracts": "^10.0||^11.0||^12.0",
+        "spatie/laravel-package-tools": "^1.16"
     },
     "require-dev": {
         "roave/security-advisories": "dev-latest",
