feat(tests): add phpunit.xml configuration and replace placeholders with GitHub Secrets

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -31,6 +31,15 @@
     <php>
         <env name="SIASN_MODE" value="production"/>
         <env name="SIASN_DEBUG" value="false"/>
+        <env name="SIASN_APIM_USERNAME" value="{{SIASN_APIM_USERNAME}}"/>
+        <env name="SIASN_APIM_PASSWORD" value="{{SIASN_APIM_PASSWORD}}"/>
+        <env name="SIASN_SSO_CLIENT_ID" value="{{SIASN_SSO_CLIENT_ID}}"/>
+        <env name="SIASN_SSO_USERNAME" value="{{SIASN_SSO_USERNAME}}"/>
+        <env name="SIASN_SSO_PASSWORD" value="{{SIASN_SSO_PASSWORD}}"/>
+        <env name="SIASN_SSO_ACCESS_TOKEN" value="{{SIASN_SSO_ACCESS_TOKEN}}"/>
+        <env name="SIASN_SSO_GENERATE" value="false"/>
+        <env name="SIASN_INSTITUTION_INSTANSI_ID" value="{{SIASN_INSTITUTION_INSTANSI_ID}}"/>
+        <env name="SIASN_INSTITUTION_SATUAN_KERJA_ID" value="{{SIASN_INSTITUTION_SATUAN_KERJA_ID}}"/>
         <env name="SIASN_TEST_GET_ENDPOINT" value="https://apimws.bkn.go.id:8243/referensi_siasn/1/agama"/>
         <env name="SIASN_TEST_GET_WITH_SSO_ENDPOINT"
              value="https://apimws.bkn.go.id:8243/apisiasn/1.0/referensi/ref-unor"/>
