--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -52,6 +52,19 @@ jobs:
       - name: List Installed Dependencies
         run: composer show -D
 
+      - name: Copy phpunit.xml.dist to phpunit.xml
+        run: cp phpunit.xml.dist phpunit.xml || echo "phpunit.xml.dist not found, skipping."
+
+      - name: Replace placeholders in phpunit.xml with GitHub Secrets
+        run: |
+          sed -i "s|{{SIASN_APIM_USERNAME}}|${{ secrets.SIASN_APIM_USERNAME }}|g" phpunit.xml
+          sed -i "s|{{SIASN_APIM_USERNAME}}|${{ secrets.SIASN_APIM_PASSWORD }}|g" phpunit.xml
+          sed -i "s|{{SIASN_APIM_USERNAME}}|${{ secrets.SIASN_SSO_CLIENT_ID }}|g" phpunit.xml
+          sed -i "s|{{SIASN_APIM_USERNAME}}|${{ secrets.SIASN_SSO_USERNAME }}|g" phpunit.xml
+          sed -i "s|{{SIASN_APIM_USERNAME}}|${{ secrets.SIASN_SSO_PASSWORD }}|g" phpunit.xml
+          sed -i "s|{{SIASN_APIM_USERNAME}}|${{ secrets.SIASN_SSO_ACCESS_TOKEN }}|g" phpunit.xml
+        shell: bash
+
       - name: Set environment variables for PHPUnit
         env:
           SIASN_MODE: ${{ secrets.SIASN_MODE }}
